Commit with older changes

--- a/style.css
+++ b/style.css
@@ -2388,7 +2388,7 @@ details.lumia-panel[open] .lumia-panel-chevron {
         line-height: 1.5;
     }
 
-    /* Margin Note Mobile - larger avatar */
+    /* Margin Note Mobile - larger avatar image */
     .lumia-ooc-margin .lumia-ooc-margin-tag {
         width: 38px;
         height: 38px;
